# Tailor

./: .gitignore  CMakeLists.txt  Makefile  README.md  index.html  obtain_miRNA.sh  params.json  run_miRNA_tailing_pipeline.sh  run_tailing_pipeline.sh
annotation/: TAIR10.genomic_features  dm3.genomic_features  hg19.genomic_features  mm10.genomic_features  mm9.genomic_features
annotation/TAIR10/: TAIR10.chromosome.bed  TAIR10.five_prime_UTR.bed  TAIR10.gene.bed  TAIR10.mRNA.bed  TAIR10.miRNA.bed  TAIR10.ncRNA.bed  TAIR10.pseudogene.bed  TAIR10.pseudogenic_exon.bed  TAIR10.pseudogenic_transcript.bed  TAIR10.rRNA.bed  TAIR10.snRNA.bed  TAIR10.snoRNA.bed  TAIR10.tRNA.bed  TAIR10.three_prime_UTR.bed  TAIR10.transposable_element.bed  TAIR10.transposable_element_gene.bed  TAIR10.transposon_fragment.bed
include/: includes.hpp
src/: abwt.hpp  abwt_format.hpp  abwt_search.cpp  abwt_search.hpp  abwt_table.hpp  abwt_thread.hpp  bucket_sort.hpp  constant_def.hpp  difference_cover.hpp  jbit.hpp  lssort.hpp  main.cpp  mkq_sort.hpp  split_sort.hpp  tailer.hpp  tailor_build.hpp  tailor_map.hpp  thread.hpp
src/compression/: N_bit_compress.hpp  abit.bak.hpp  abit.hpp  compressrule_trait.hpp  jbit.hpp  n_bit_compress_update.hpp  twobit.hpp  twobit_hamburg.hpp
stylesheets/: styles.css
utils/: fastq_revcom.cpp  intersect_all_tailor.sh  phred_filter_and_pool.cpp  plot_length_S_AS.sh  run_miRNA_tailing_pipeline.sh  run_tailing_pipeline.sh  tailing_pipeline.sh  tailor_bedwo_MM.cpp  tailor_sam_to_bed.cpp
utils/internal_use_only/: generator_fastq.sh  random_fq_tailing.sh  remove_mapped_reads.sh  tailing_by_bowtie_trimming.sh  test_pool_size.sh  test_speed.sh
